--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.3.9"
   },
   "dependencies": {
@@ -19,6 +22,7 @@
     "r3f-perf": "^7.1.2",
     "react": "18.2",
     "react-dom": "18.2",
+    "tailwind": "^4.0.0",
     "three": "^0.153.0"
   }
 }
